commit of the school day

--- a/about/index.html
+++ b/about/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link href="https://vjs.zencdn.net/8.0.4/video-js.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Tom and Jery!</title>
     <script defer src="js.js"></script>
     <link rel="stylesheet" href="css.css" />
-    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
-</head>
-<body>
-    
-</body>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
+  </head>
+  <body>
+    <div class="nav">
+        <a href="/">Home&nbsp;</a>
+        <a class="borderh" href="/about"> &nbsp;About</a>
+        <a href="/quiz"> &nbsp;Quiz</a>
+        </div>
+    <div class="bout">
+      <h2>What is Tom and Jerry?</h2>
+      <video
+        autoplay
+        width="500"
+        src="Tom & Jerry (1940) - S01E01 - Puss Gets The Boot (1080p BluRay x265 Ghost).mp4"
+      ></video>
+      <p>
+        Tom and Jerry is an American animated media franchise and series of
+        comedy short films created in 1940 by William Hanna and Joseph Barbera.
+        Best known for its 161 theatrical short films by Metro-Goldwyn-Mayer,
+        the series centers on the rivalry between the titular characters of a
+        cat named Tom and a mouse named Jerry. Many shorts also feature several
+        recurring characters.
+      </p>
+      <img src="tomh.jpg" width="300" />
+    </div>
+  </body>
+</html>
