--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Tom</title>
     <script defer src="js.js"></script>
     <link rel="stylesheet" href="css.css" />
-    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
-</head>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
+  </head>
+  <body>
+    <div class="nav">
+      <a href="/">Home&nbsp;</a>
+      <a class="borderh" href="/about"> &nbsp;About</a>
+      <a href="/quiz"> &nbsp;Quiz</a>
+    </div>
+    <div class="quizes">
+      <h1>Tom and Jerry Quiz!</h1>
+      <hr />
+      <h2>Question 1</h2>
+      <p>When was Tom and jerry created?</p>
+      <p>Answer: <input id="qone" /></p>
+      <p id="feedback1"></p>
+      <hr />
+      <h2>Question 2</h2>
+      <p>Who created Tom and Jerry?</p>
+      <p>Answer: <input id="qtwo" /></p>
+      <p id="feedback2"></p>
+      <hr />
+      <h2>Question 3</h2>
+      <p>Who created Tom and Jerry?</p>
+      <p>Answer: <input id="qtree" /></p>
+      <p id="feedback3"></p>
+      <hr />
+      <h2>Question 4</h2>
+      <p>Who created Tom and Jerry?</p>
+      <p>Answer: <input id="qfour" /></p>
+      <p id="feedback4"></p>
+      <button id="btn">Check Answers!</button>
+    </div>
+  </body>
+  <html></html>
+</html>
