--- a/quiz/index.html
+++ b/quiz/index.html
@@ -19,8 +19,8 @@
       <h1>Tom and Jerry Quiz!</h1>
       <hr />
       <h2>Question 1</h2>
-      <p>When was Tom and jerry created?</p>
-      <p>Answer: <input id="qone" /></p>
+      <p>When was Tom and Jerry created?</p>
+      <p>Answer: <input id="qone" type="number"/></p>
       <p id="feedback1"></p>
       <hr />
       <h2>Question 2</h2>
@@ -29,15 +29,16 @@
       <p id="feedback2"></p>
       <hr />
       <h2>Question 3</h2>
-      <p>Who created Tom and Jerry?</p>
+      <p>What animal is Tom?</p>
       <p>Answer: <input id="qtree" /></p>
       <p id="feedback3"></p>
       <hr />
       <h2>Question 4</h2>
-      <p>Who created Tom and Jerry?</p>
+      <p>What animal is Jerry?</p>
       <p>Answer: <input id="qfour" /></p>
       <p id="feedback4"></p>
       <button id="btn">Check Answers!</button>
+      <p id="results"></p>
     </div>
   </body>
   <html></html>
