--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tom and Jery!</title>
     <script defer src="js.js"></script>
     <link rel="stylesheet" href="css.css" />
-    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
-</head>
-<body>
-<div class="nav">
-<a href="">Home&nbsp;</a>
-<a class="borderh" href="/about"> &nbsp;About</a>
-<a href="/quiz"> &nbsp;Quiz</a>
-</div>
-<img src="Tom_and_Jerry_logo.svg.png" width="500" class="center">
-<p class="mono">Your favorite duos back at it again!</p>
-<img src="giphy.gif" width="250" class="jerh">
-<audio id="foobar" src="callme.mp3" preload="auto"> 
-</body>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
+  </head>
+  <body>
+    <div class="nav">
+      <a href="">Home&nbsp;</a>
+      <a class="borderh" href="/about"> &nbsp;About</a>
+      <a href="/quiz"> &nbsp;Quiz</a>
+    </div>
+    <img src="Tom_and_Jerry_logo.svg.png" width="500" class="center" />
+    <p class="mono">Your favorite duos back at it again!</p>
+    <img src="giphy.gif" width="250" class="jerh" />
+    <audio id="foobar" src="callme.mp3" preload="auto"></audio>
+  </body>
+</html>
