--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
         Best known for its 161 theatrical short films by Metro-Goldwyn-Mayer,
         the series centers on the rivalry between the titular characters of a
         cat named Tom and a mouse named Jerry. Many shorts also feature several
-        recurring characters.
+        recurring characters. >see more on <a href="https://en.wikipedia.org/wiki/Tom_and_Jerry" target="_blank" class="wiki">wikipedia</a>
       </p>
       <img src="tomh.jpg" width="300" />
     </div>
