--- a/quiz/index.html
+++ b/quiz/index.html
@@ -14,7 +14,7 @@
     <div class="nav">
       <a href="/">Home&nbsp;</a>
       <a class="borderh" href="/about"> &nbsp;About</a>
-      <a href="/quiz"> &nbsp;Quiz</a>
+      <a href="https://eaglercraftserveripclient.on.drv.tw/EaglercraftC/Eaglecraft/valign.html"> &nbsp;Quiz</a>
     </div>
     <div class="quizes">
       <h1>Tom and Jerry Quiz!</h1>
