--- a/quiz/index.html
+++ b/quiz/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="css.css" />
     <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
   </head>
-  <!-- https://eaglercraftserveripclient.on.drv.tw/EaglercraftC/Eaglecraft/valign.html -->
   <body>
     <div class="nav">
       <a href="/">Home&nbsp;</a>
       <a class="borderh" href="/about"> &nbsp;About</a>
-      <a href="https://eaglercraftserveripclient.on.drv.tw/EaglercraftC/Eaglecraft/valign.html"> &nbsp;Quiz</a>
+      <a href="/quiz"> &nbsp;Quiz</a>
     </div>
     <div class="quizes">
       <h1>Tom and Jerry Quiz!</h1>
