--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,13 @@
         Best known for its 161 theatrical short films by Metro-Goldwyn-Mayer,
         the series centers on the rivalry between the titular characters of a
         cat named Tom and a mouse named Jerry. Many shorts also feature several
-        recurring characters. See more on <a href="https://en.wikipedia.org/wiki/Tom_and_Jerry" target="_blank" class="blue">Wikipedia</a>.
+        recurring characters. See more on
+        <a
+          href="https://en.wikipedia.org/wiki/Tom_and_Jerry"
+          target="_blank"
+          class="blue"
+          >Wikipedia</a
+        >.
       </p>
       <p>Top 5 Most Viewed Tom and Jerry Episodes</p>
       <ol>
